[package]
name = "soljeets_smc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soljeets_smc"

[features]
no-entrypoint = []
no-idl=[]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version= "0.30.0", features=["init-if-needed"]}
anchor-spl = {version = "0.30.0", features=["metadata"]}
bytemuck = "1.16.0"
mpl-token-metadata = "4.1.2"

[dev-dependencies]
solana-program-test = "1.10.30"
solana-sdk = "1.10.30"
rand = "0.8.5"
